added error messages instead of alerts

--- a/client/main.html
+++ b/client/main.html
@@ -1,3 +1,8 @@
 <head>
   <title>Contender</title>
+
+  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+
+
 </head>
