--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,5 @@
 <head>
+  <link href='http://fonts.googleapis.com/css?family=Exo:700,800,900' rel='stylesheet' type='text/css'>
   <title>Contender</title>
 
 </head>
